tests/paczka1/fuzzy1/44832984.err
Error in line 3: 3Fmyzq A44 61,1
Error in line 1: A524 A44 76,3
Error in line 10: 3Fmyzq A524 98,8
Error in line 25: D4pZ0L6 S222 21,58
Error in line 18: D4pZ0L6 S222 71,4
Error in line 37: A524 S702 81,0
